--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -24,3 +24,13 @@
 .politico-img {
   max-width: 100%;
 }
+
+.btn-primary {
+  background-color: #2e414d;
+  border-color: #2e414d;
+}
+
+.btn-primary:hover {
+  background-color: #3b5363;
+  border-color: #3b5363;
+}
